# fyb

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  auth.py  community.py  goals.py  habits.py  journal.py  mood.py  personal.py  planner.py  tracker.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  base.py  community.py  goal.py  habit.py  journal.py  mood.py  notification.py  personal.py  planner.py  tracker.py  user.py
backend/app/schemas/: community.py  goal.py  habit.py  journal.py  mood.py  notification.py  personal.py  planner.py  tracker.py  user.py
backend/app/services/: personalization.py
backend/app/tests/: test_health.py
backend/app/utils/: deps.py  security.py
frontend/: index.html  package.json  tailwind.config.js
frontend/public/: manifest.json  service-worker.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: CommunityHub.jsx  DashboardModules.jsx  GoalTimeline.jsx  HabitBoard.jsx  HeroBanner.jsx  JournalCanvas.jsx  Navigation.jsx  PersonalSpace.jsx  PlannerTimeline.jsx
frontend/src/context/: AuthContext.jsx  RealtimeContext.jsx
frontend/src/data/: mockData.js
frontend/src/hooks/: useApi.js
